<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_productss"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_talk"
            android:icon="@mipmap/ic_menu_voice"
            android:title="@string/pesquisa_por_voz" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_adiciona_produtos" />
    </group>

    <item android:title="@string/menu_comunicacao">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_chat" />
        </menu>
    </item>

</menu>
